--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,7 @@
 <resources>
-    <string name="app_name">homework3_1</string>
-    <string name="name_animal">Example list</string>
+    <string name="app_name">ThirdHomework</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="empty_description">Empty description</string>
+    <string name="nothing_to_show">Nothing to show</string>
+    <string name="name">Name</string>
 </resources>
