--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,10 @@
     <string name="empty_description">Empty description</string>
     <string name="nothing_to_show">Nothing to show</string>
     <string name="name">Name</string>
+    <string name="get_location">Get Location</string>
+    <string name="start_location">Start location</string>
+    <string name="btn_get_location">Get location</string>
+    <string name="longitude">Longitude</string>
+    <string name="latitude">Latitude</string>
+    <string name="location">Location</string>
 </resources>
